# RabbitSpeedTest

./: .dockerignore  .gitignore  Makefile  README.md  clients.html  index.html  pyproject.toml  requirements.txt  simple_rabbit.py
.github/workflows/: ci.yml  publish.yml
benchmark/: __init__.py  config.py  harness.py  main.py  results.py  runner.py  statistics.py
benchmark/benchmarks/: concurrent_consume.py  concurrent_publish.py  consume_latency.py  consume_throughput.py  publish_latency.py  publish_throughput.py
benchmark/clients/: aio_pika_client.py  base.py  fake_client.py  hybrid_client.py  pika_client.py  simple_client.py
benchmark/reporting/: charts.py  report_generator.py
configs/: smoke.json
docs/: architecture.md  publishing.md
rabbit-benchmark/: Makefile  README.md  pyproject.toml  requirements.txt
rabbit-benchmark/benchmark/: config.py  harness.py  runner.py  statistics.py
rabbit-benchmark/benchmark/benchmarks/: concurrent_consume.py  concurrent_publish.py  consume_latency.py  consume_throughput_get.py  preload.py  publish_throughput.py  round_trip.py
rabbit-benchmark/benchmark/clients/: aio_pika_client.py  rabbit_client_bench.py  simple_client.py
rabbit-benchmark/tests/: helpers.py  test_rabbit_client_bench.py  test_round_trip.py  test_runner.py  test_simple_client.py
rabbit-client-python/: CHANGELOG.md  README.md  pyproject.toml
rabbit-client-python/docs/: api.md
rabbit-client-python/src/hs_rabbit_client/: __init__.py  client.py
rabbit-client-python/src/rabbit_client/: __init__.py  client.py
rabbit-client-python/src/simple_rabbit/: __init__.py
rabbit-client-python/tests/: conftest.py  test_rabbit_client.py  test_unit.py  test_watchdog.py
rabbit-client-typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
rabbit-client-typescript/bench/: bench.cjs
rabbit-client-typescript/src/: index.ts  rabbit-client.ts  simple-rabbit.ts
rabbit-client-typescript/tests/: integration.test.ts  rabbit-client.test.ts  simple-rabbit.test.ts
results/20260711-155329/: report.html  results.csv  results.json
results/20260711-155415 pika vs aio-pika/: report.html  results.csv  results.json
results/20260711-160721 aio-pika 500/: report.html  results.csv  results.json
results/20260711-160807 aio-pika 50000/: report.html  results.csv  (+1 more)
shared_data_service/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt
shared_data_service/alembic/: env.py
shared_data_service/alembic/versions/: 234e3011d09a_projects_table.py  896a3b18fd21_organizations_table.py  97cd1c96f623_initial_users_and_processed_events.py  a1b2c3d4e5f6_users_project_id_scope.py
shared_data_service/app/api/: app.py  errors.py  health.py  middleware.py
shared_data_service/app/bootstrap/: api_app.py  consumer_runner.py  container.py
shared_data_service/app/config/: settings.py
shared_data_service/app/database/: base.py  engine.py  errors.py  inbox.py  storable.py  unit_of_work.py
shared_data_service/app/logging/: correlation.py  setup.py
shared_data_service/app/messaging/: _vendored_simple_rabbit.py  batcher.py  cloudevents.py  consumer.py  protocols.py  publisher.py  rabbit_client_adapter.py  registry.py  simple_client.py
shared_data_service/app/modules/: __init__.py  organization.py  project.py  user.py
shared_data_service/app/modules/project/: __init__.py  business.py  events.py  model.py  repository.py  router.py  schemas.py
shared_data_service/app/modules/shared/: errors.py  events.py  filters.py  query.py  repository.py  routes.py  routing.py  schemas.py  service.py  spec.py  validation.py  wiring.py
shared_data_service/app/modules/user/: business.py  events.py  model.py  repository.py  router.py  schemas.py
shared_data_service/deploy/: README.md  config.env  kustomization.yaml  secrets.env.example
shared_data_service/deploy/k8s/: api-deployment.yaml  api-service.yaml  consumer-deployment.yaml  migrate-job.yaml  namespace.yaml
shared_data_service/docs/: architecture.md
shared_data_service/docs/planning/: 01_requirements.md  02_architecture.md  03_implementation_rules.md  04_acceptance_checklist.md  05_execution_plan.md
shared_data_service/docs/superpowers/specs/: 2026-07-19-generic-module-abstractions-design.md
shared_data_service/onboarding/: 01-what-and-why.md  02-setup.md  03-architecture-tour.md  04-reliability-model.md  05-adding-a-module.md  06-testing.md  07-operations.md  08-maintenance.md  index.md
shared_data_service/scripts/: benchmark.py  benchmark_results.json
shared_data_service/tests/: fakes.py
shared_data_service/tests/entity_contract/: conftest.py  fixtures.py  test_crud_contract.py  test_event_contract.py  test_list_contract.py  test_sync_contract.py
shared_data_service/tests/integration/: conftest.py  test_api.py  test_cross_module_create_example.py  test_filter_operators.py  test_full_e2e.py  test_lifecycle.py  test_messaging.py  test_project_api.py  test_repository.py  test_scoped_routing.py
shared_data_service/tests/module_contract/: conftest.py  fixtures.py  test_crud_contract.py  test_event_contract.py  test_list_contract.py  test_sync_contract.py
shared_data_service/tests/unit/: test_batcher.py  test_cloudevents.py  test_consumer.py  test_engine_tls.py  test_entity_routes.py  test_entity_specs.py  test_event_handling.py  test_filters.py  test_module_routes.py  test_organization_module.py  test_query.py  test_settings.py  test_supervision.py  test_unit_of_work.py  test_user_service.py  test_vendored_client.py
shared_data_service_docs/: 01_requirements.md  03_implementation_rules.md
tests/: helpers.py  test_aio_pika_client.py  test_base_and_fake.py  test_charts.py  test_concurrent_benchmarks.py  test_config.py  test_harness.py  test_hybrid_client.py  test_latency_benchmarks.py  test_main.py  test_pika_client.py  test_report_generator.py  test_results.py  test_runner.py  test_simple_rabbit.py  test_statistics.py  test_throughput_benchmarks.py
(+25 files in other folders)
