[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rabbitmq-benchmark"
version = "0.1.0"
description = "Benchmark suite comparing pika and aio-pika against RabbitMQ"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["benchmark*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
