[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rabbit-client"
version = "0.1.0"
description = "Minimal aio-pika-only RabbitMQ publisher/consumer with robust reconnect, per-message acks, and prefetch concurrency"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
